// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finder 🇬🇧 citations 1`] = `
Array [
  Object {
    "abbr": "Ves Sen",
    "citation": "(1754) 2 Ves Sen 547",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1754",
  },
]
`;

exports[`Finder 🇬🇧 citations 2`] = `
Array [
  Object {
    "abbr": "All ER",
    "citation": "[1843-60] All ER 249",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1843",
  },
]
`;

exports[`Finder 🇬🇧 citations 3`] = `
Array [
  Object {
    "abbr": "KB",
    "citation": "[1948] 1 KB 223",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1948",
  },
]
`;

exports[`Finder 🇬🇧 citations 4`] = `
Array [
  Object {
    "abbr": "QB",
    "citation": "[1965] 1 QB 456",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1965",
  },
]
`;

exports[`Finder 🇬🇧 citations 5`] = `
Array [
  Object {
    "abbr": "Cr App R",
    "citation": "(1951) 35 Cr App R 164",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1951",
  },
]
`;

exports[`Finder 🇬🇧 citations 6`] = `
Array [
  Object {
    "abbr": "UKHL",
    "citation": "[2007] UKHL 17",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2007",
  },
]
`;

exports[`Finder 🇬🇧 citations 7`] = `
Array [
  Object {
    "abbr": "UKIPO",
    "citation": "O/328/22",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder 🇬🇧 citations 8`] = `
Array [
  Object {
    "abbr": "UKIPO",
    "citation": "O/002/22",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder 🇬🇧 citations 9`] = `
Array [
  Object {
    "abbr": "UKIPO",
    "citation": "O01422",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder 🇸🇬 citations 1`] = `
Array [
  Object {
    "abbr": "SGCA",
    "citation": "[2021] SGCA 34",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2021",
  },
]
`;

exports[`Finder 🇸🇬 citations 2`] = `
Array [
  Object {
    "abbr": "SGHC",
    "citation": "[2020] SGHC 228",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder 🇸🇬 citations 3`] = `
Array [
  Object {
    "abbr": "SGHC",
    "citation": "[2020] SGHC 100",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder 🇸🇬 citations 4`] = `
Array [
  Object {
    "abbr": "SLR",
    "citation": "[2011] 2 SLR 47",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2011",
  },
]
`;

exports[`Finder 🇸🇬 citations 5`] = `
Array [
  Object {
    "abbr": "SGDC",
    "citation": "[2020] SGDC 95",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder 🇸🇬 citations 6`] = `
Array [
  Object {
    "abbr": "SGCA",
    "citation": "[1994] SGCA 128",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "1994",
  },
]
`;

exports[`Finder 🇸🇬 citations 7`] = `
Array [
  Object {
    "abbr": "SGCA",
    "citation": "[1988] SGCA 16",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "1988",
  },
]
`;

exports[`Finder 🇸🇬 citations 8`] = `
Array [
  Object {
    "abbr": "SLR",
    "citation": "[2001] 2 SLR 253",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2001",
  },
]
`;

exports[`Finder 🇸🇬 citations 9`] = `
Array [
  Object {
    "abbr": "SLR",
    "citation": "[2001] 2 SLR 253",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2001",
  },
]
`;
